Update specs to avoid explicitely put on JSON the user ID and unique ID when PUT requests
