# project2-api-pokemon/spring-server/src/main/java/ch/heig/amt/pokemon/api/endpoints/TrainersApiControllers.java
@@ -5,6 +5,7 @@ import ch.heig.amt.pokemon.api.TrainersApi;
 import ch.heig.amt.pokemon.api.exceptions.TrainerNotFoundException;
 import ch.heig.amt.pokemon.api.model.Pokemon;
 import ch.heig.amt.pokemon.api.model.Trainer;
+import ch.heig.amt.pokemon.api.model.TrainerPut;
 import ch.heig.amt.pokemon.api.model.TrainerWithId;
 import ch.heig.amt.pokemon.entities.PokemonEntity;
 import ch.heig.amt.pokemon.entities.TrainerEntity;
@@ -114,7 +115,7 @@ public class TrainersApiControllers implements TrainersApi {
         return ResponseEntity.ok(pageResult.getContent());
     }
 
-    public ResponseEntity<Void> updateTrainerById(@ApiParam(value = "The trainer ID",required=true) @PathVariable("id") Integer id,@ApiParam(value = "" ,required=true )  @Valid @RequestBody Trainer trainer) {
+    public ResponseEntity<Void> updateTrainerById(@ApiParam(value = "The trainer ID",required=true) @PathVariable("id") Integer id,@ApiParam(value = "" ,required=true )  @Valid @RequestBody TrainerPut trainer) {
         Integer idUser = (Integer)request.getAttribute("idUser");
 
         Optional<TrainerEntity> optionalTrainerEntity = trainerRepository.findByTrainerIdAndIdUser(id, idUser);
@@ -123,16 +124,17 @@ public class TrainersApiControllers implements TrainersApi {
             throw new TrainerNotFoundException("Trainer not found");
         }
 
-        TrainerWithId updatedTrainer = addID(id,trainer);
+        TrainerWithId updatedTrainer = addID(id, trainer, idUser);
         trainerRepository.save(toTrainerEntity(updatedTrainer));
 
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
-    private TrainerWithId addID(int id, Trainer trainer){
+    private TrainerWithId addID(int id, TrainerPut trainer, int idUser){
         TrainerWithId trainerWithId = new TrainerWithId();
+
         trainerWithId.setId(id);
-        trainerWithId.setIdUser(trainer.getIdUser());
+        trainerWithId.setIdUser(idUser);
         trainerWithId.setSurname(trainer.getSurname());
         trainerWithId.setName(trainer.getName());
         trainerWithId.setNumberOfBadges(trainer.getNumberOfBadges());
